--- a/admin/style.css
+++ b/admin/style.css
@@ -37,6 +37,10 @@ body{
     display: none;
 }
 
+.menu :hover{
+    cursor: pointer;
+}
+
 .header button{
     background-color: transparent;
     border: none;
@@ -85,16 +89,25 @@ input:focus{
     outline: none;
     color: var(--input-color);
 }
+
+.search-button{
+    display: none;
+}
+
 .current-user{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    flex: 1 1 auto;
+    flex: 0 1 auto;
+    background-color: var(--container-bgcolor);
+    margin-left: 1em;
+    padding-inline: 1em;
+    border-radius: 50%;
 }
 
 .section{
     display: flex;
-    padding-top: 4.5em;
+    padding-top: 4.3em;
     height: 100%;
 }
 
@@ -130,16 +143,27 @@ li:hover{
 .contents{
     width: 80%;
 }
-.sidebar.active{
-    width: 250px;
-}
 
 @media (max-width: 45em){
     .sidebar{
         width: 0;
     }
+    .search-button{
+        flex: 0 1 auto;
+        background-color: var(--container-bgcolor);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 1em;
+        border-radius: 50%;
+        padding-inline: .5em;
+    }
     .search{
-        display: none;
+        opacity: 0;
+    }
+    .search.add{
+        width: 12em;
+        opacity: 1;
     }
     .menu{
         display: block;
