--- a/css/root.css
+++ b/css/root.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Roboto+Condensed&display=swap');
+
+
 :root{
     --heading-font: 'Black Ops One', cursive;
     --heading-size: 2rem;
