changed the page to grid format and arranged the sidebar and header accrondingly and made it respnosive to phone

--- a/includes/user-page.html
+++ b/includes/user-page.html
@@ -56,6 +56,9 @@
                 </div>
             </div>
         </header>
+        <div class="main">
+            
+        </div>
     </div>
     <script src="../js/user-page.js"></script>
 </body>
