--- a/css/user-page.css
+++ b/css/user-page.css
@@ -7,23 +7,37 @@ html{
 body{
     background-color: #D3D3D3;
     position: relative;
+    animation: page-loading 0.6s cubic-bezier(1, 0.93, 0.78, 1);
 }
 .container{
-    display: flex;
-    position: relative;
+    display: grid;
+    grid-template-columns: 18% 1fr; /* Sidebar and main content */
+  grid-template-rows: 4em 1fr; /* Header and remaining content */
+  grid-template-areas:
+    "header header"
+    "sidebar main";
+    width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; 
 }
 /* Define the styles for your sidebar */
 .side-nav {
+    position: fixed;
+    grid-area: sidebar;
+    top: 0;
+    left: 0;
+    width: 18%;
     height: 100dvh; /* Make the sidebar full height */
-    width: 20%; /* Adjust the width as needed */
     background-color: var(--body-bgcolor); /* Sidebar background color */
     color: #fff; /* Text color */
-    
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    overflow-x: hidden;
     transition: width 0.4s ease-in-out;
+    animation: width-loading 0.6s ease-in-out;
 }
 .section-1{
     padding: 1em;
@@ -87,13 +101,18 @@ a {
 }
 
 header{
-    flex: 1 1 auto;
+    grid-area: header;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 0;
+    width: -webkit-fill-available;
+    left: 18%;
     background-color: var(--body-bgcolor);
     margin: .5em;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 80%;
     height: 6dvh;
     border-radius: 8px;
     padding-inline: 1em;
@@ -144,9 +163,23 @@ header h2{
     font-size: 8px;
 }
 
+.main{
+    grid-area: main;
+    background-color: #f9f9f9;
+    margin: 1em;
+    padding: 20px;
+    overflow: auto;
+    color: black;
+    border-radius: 12px;
+}
+
 @media (max-width: 40em){
     img{
         width: 15px;
+    }
+    .container{
+        grid-template-columns: .1em 1fr;
+        grid-template-rows: 3em 1fr;
     }
     .menu-button{
         margin: .5em 0 0 .2em;
@@ -162,6 +195,7 @@ header h2{
         width: 30px;
     }
     .side-nav{
+        display: none;
         width: 0;
         font-size: .8em;
     }
@@ -173,10 +207,39 @@ header h2{
     }
     .side-nav.active{
         font-size: .8em;
+        display: flex;
         width: 38.33%;
     }
     header{
         height: 40px;
-        margin-inline: .24em;
+        left: 2.5em;
+    }
+}
+
+@keyframes page-loading{
+    0%{
+        opacity: 0;
+        transform: translateY(-2em);
+    }
+    25%{
+        opacity: .25;
+    }
+    75%{
+        opacity: .75;
+        transform: translateX(0);
+    }
+    100%{
+        opacity: 1;
+    }
+}
+@keyframes width-loading{
+    0%{
+        transform: translateX(-8em);
+    }
+    50%{
+        transform: translateX(-2em);
+    }
+    100%{
+        transform: translateX(0);
     }
 }
