created a model for the user home page with some divs

--- a/includes/user-page.html
+++ b/includes/user-page.html
@@ -19,7 +19,7 @@
             <div class="h-divider"></div>
             <div class="link">
                 <img src="../icons/home.svg" alt="">
-                <a href="" id="home">Home</a>
+                <a href="user-page.html" id="home">Home</a>
             </div>
             <div class="link">
                 <img src="../icons/resource.svg" alt="">
@@ -34,6 +34,10 @@
                 <a href="" id="notification">Notifications</a>
             </div>
             <div class="h-divider"></div>
+            <div class="link">
+                <img src="../icons/setting.svg" alt="">
+                <a href="" id="setting">Settings</a>
+            </div>
             <div class="link">
                 <img src="../icons/logout.svg" alt="">
                 <a href="" id="logout">Logout</a>
@@ -57,7 +61,28 @@
             </div>
         </header>
         <div class="main">
-            
+            <h2>Your Projects</h2>
+            <div class="h-divider"></div>
+            <div class="project-container">
+                <div class="project-box">
+                    <h3>projectName</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Tempora laborum natus modi.</p>
+                    <div class="file-content">
+                        <img src="../icons/code-solid.svg" alt="">
+                        <a href="#">file link</a>
+                    </div>
+                </div>
+                <div class="project-box">
+                    
+                </div>
+                <div class="project-box">
+                    
+                </div>
+                <div class="project-box">
+                    
+                </div>
+            </div>
         </div>
     </div>
     <script src="../js/user-page.js"></script>
