--- a/includes/user-page.html
+++ b/includes/user-page.html
@@ -17,10 +17,7 @@
                 </div>
             </div>
             <div class="h-divider"></div>
-            <div class="link">
-                <img src="../icons/home.svg" alt="">
-                <a href="user-page.html" id="home">Home</a>
-            </div>
+            
             <div class="link">
                 <img src="../icons/resource.svg" alt="">
                 <a href="" id="projects">Projects</a>
@@ -28,6 +25,10 @@
             <div class="link">
                 <img src="../icons/idea.svg" alt="">
                 <a href="" id="idea-submission">Idea Submission</a>
+            </div>
+            <div class="link">
+                <img src="../icons/upload.svg" alt="">
+                <a href="" id="your-projects">Your Uploads</a>
             </div>
             <div class="link">
                 <img src="../icons/bell.svg" alt="">
@@ -61,28 +62,7 @@
             </div>
         </header>
         <div class="main">
-            <h2>Your Projects</h2>
-            <div class="h-divider"></div>
-            <div class="project-container">
-                <div class="project-box">
-                    <h3>projectName</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Tempora laborum natus modi.</p>
-                    <div class="file-content">
-                        <img src="../icons/code-solid.svg" alt="">
-                        <a href="#">file link</a>
-                    </div>
-                </div>
-                <div class="project-box">
-                    
-                </div>
-                <div class="project-box">
-                    
-                </div>
-                <div class="project-box">
-                    
-                </div>
-            </div>
+            
         </div>
     </div>
     <script src="../js/user-page.js"></script>
