changed the css file position

--- a/includes/user-page.html
+++ b/includes/user-page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeHive</title>
     <link rel="icon" href="..icons/codeHive.svg">
-    <link rel="stylesheet" href="../css/user-page.css">
+    <link rel="stylesheet" href="user-page.css">
 </head>
 <body>
     <div class="container">
