--- a/css/student-project.css
+++ b/css/student-project.css
@@ -10,10 +10,11 @@
     padding: 0;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
 }
 .search-form{
     /* background-color: #d3d3d38c; */
-    padding: 1em;
+    padding-top: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: larger;
     border-radius: .5em;
@@ -25,7 +26,7 @@
     margin-top: .5em;
     border-radius: .5em;
     display: flex;
-    background-color: #d3d3d38c;
+    background-color: #fff;
     width: 75%;
     padding: .5em;
 }
@@ -144,8 +145,61 @@ input[type="radio"]:checked + label {
     animation: page-loading 0.8s ease-in-out;
 }
 
+/* view results */
+.search-result{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.search-result h2{
+    font-weight: 200;
+}
+
+.project-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+}
+.project-box{
+    max-width: 300px;
+    min-width: 280px;
+    width: calc(25% - 10px);
+    background-color: var(--body-bgcolor);
+    border-radius: 12px;
+    padding: 1em;
+}
+
+.file-content{
+    padding-top: .5em;
+    display: flex;
+    align-items: center;
+}
+.file-content img{
+    width: 1em;
+}
+.project-container{
+    margin: 1em;
+}
+.project-box{
+    background-color: #fff;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); 
+    border: 1px solid #ccc;
+    transition: transform 0.2s ease-in-out;
+}
+.project-box:hover {
+    transform: translateY(-5px); /* Move the box up slightly on hover */
+}
+
+/* new uploads */
+
+
 
 @media (max-width: 40em){
+    .search-form{
+        width: fit-content;
+    }
     form input{
         font-size: .8em;
     }
@@ -163,6 +217,9 @@ input[type="radio"]:checked + label {
         align-items: center;
         justify-content: center;
         gap: .2em;
+    }
+    .project-container{
+        margin: .3em;
     }
 }
 
