--- a/css/student-project.css
+++ b/css/student-project.css
@@ -156,6 +156,12 @@ input[type="radio"]:checked + label {
     font-weight: 200;
 }
 
+.upload{
+    background-color: rgb(57, 57, 185);
+    margin: 8px;
+    border-radius: 5px;
+}
+
 .project-container{
     display: flex;
     flex-wrap: wrap;
@@ -179,7 +185,7 @@ input[type="radio"]:checked + label {
     flex-direction: column;
     justify-content: center;
     font-family: var(--title-font);
-    gap: .2em;
+    gap: .5em;
 }
 .file-content img{
     width: 1em;
@@ -192,7 +198,7 @@ input[type="radio"]:checked + label {
     color: rgb(57, 57, 185);
 }
 .file-content .project-description{
-    height: 100px;
+    height: 80px;
     overflow: scroll;
 }
 .project-container{
