--- a/includes/user-page.css
+++ b/includes/user-page.css
@@ -169,8 +169,8 @@ img{
 
 .main{
     grid-area: main;
-    margin: 1em;
-    padding: 15px;
+    /* margin: 1em; */
+    padding: 1em;
     overflow: auto;
     color: black;
     border-radius: 12px;
